<resources>
    <string name="app_name">ControlesBasicos</string>
    <string name="ej1txt1">Introduce primer valor</string>
    <string name="ej1txt2">Introduce segundo valor</string>
    <string name="ej1btn">Sumar</string>
    <string name="ej1txt3">La suma es: </string>
    <string name="ej2btnSum">+</string>
    <string name="ej2btnRes">-</string>
    <string name="ej2btnDiv">/</string>
    <string name="ej2btnMult">*</string>
    <string name="ej2txt3">Resultado: </string>
    <string name="bntEncender">Encender</string>
    <string name="btnApagar">Apagar</string>
    <string name="ej4txt1">Introduce un DNI: </string>
    <string name="ej4txt2">Número DNI</string>
    <string name="ej4txt3">Letra</string>
    <string name="ej4btnValidar">VALIDAR DNI</string>
    <string name="ej5btnGoogle">Google</string>
    <string name="ej5btnYahoo">Yahoo</string>
    <string name="ej5btnBing">Bing</string>
    <string name="ej6txt1">Camara 1:</string>
    <string name="ej6txt2">Luz 1:</string>
    <string name="ej6txt3">Camara 2:</string>
    <string name="ej6txt4">Luz 2:</string>
    <string name="ej6btn1">SI</string>
    <string name="ej6btn2">NO</string>
    <string name="ej7cam1on">Cam1 ON</string>
    <string name="ej7cam2on">Cam2 ON</string>
    <string name="ej7cam1off">Cam1 OFF</string>
    <string name="ej7cam2off">Cam2 OFF</string>
    <string name="ej7luz1ontxt">Luz1 ON</string>
    <string name="ej7luz2ontxt">Luz2 ON</string>
    <string name="ej7luz1offtxt">Luz1 OFF</string>
    <string name="ej7luz2offtxt">Luz2 OFF</string>
    <string name="ej7btnenc">Encender</string>
    <string name="ej7btnapa">Apagar</string>
    <string name="ej7temp">Temperatura: </string>
</resources>
