<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio6">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/ej6txt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swcam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="190dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/ej6txt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Switch
        android:id="@+id/swluz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="189dp"
        app:layout_constraintBottom_toTopOf="@+id/btncam2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/swcam1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/ej6txt3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ToggleButton
        android:id="@+id/btncam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="183dp"
        android:checked="true"
        android:textOff="@string/ej6btn2"
        android:textOn="@string/ej6btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/swluz1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/ej6txt4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ToggleButton
        android:id="@+id/btnluz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="182dp"
        android:checked="false"
        android:textOff="@string/ej6btn2"
        android:textOn="@string/ej6btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/btncam2" />

    <ImageView
        android:id="@+id/ivcam1"
        android:layout_width="71dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/camara" />

    <ImageView
        android:id="@+id/ivluz1"
        android:layout_width="71dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/ivcam1"
        app:layout_constraintTop_toBottomOf="@+id/btnluz2"
        app:srcCompat="@drawable/bnbapagada" />

    <ImageView
        android:id="@+id/ivcam2"
        android:layout_width="71dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/ivluz1"
        app:layout_constraintTop_toBottomOf="@+id/btnluz2"
        app:srcCompat="@drawable/camara" />

    <ImageView
        android:id="@+id/ivluz2"
        android:layout_width="71dp"
        android:layout_height="59dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivcam2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bnbapagada" />

</androidx.constraintlayout.widget.ConstraintLayout>